src/components/nav/navbar.css
.navbar {
	width: 100%;
	height: fit-content;
	padding: 3rem 0;
	position: fixed;
	top: 0;
	display: flex;
	justify-content: center;
	background-color: var(--dark-1);
	z-index: 5;
}

nav {
	display: flex;
	justify-content: space-between;
	align-items: center;
	width: 85%;
}

nav .logo{
	width: 4rem;
}

.navlinks-mobile {
	width: 80%;
	background-color: var(--dark-2);
	display: flex;
	flex-direction: column;
	position: fixed;
	top: 0;
	right: 0;
	height: 100vh;
	-webkit-animation: slide-left 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
	animation: slide-left 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
}

.navlinks {
	display: none;
}

.navlinks li a{
	margin-left: 3rem;
}

/* TODO */
/* .navlinks li a:hover{
	
} */


@keyframes slide-left {
	0% {
		-webkit-transform: translateX(100%);
		transform: translateX(100%);
	}
	100% {
		-webkit-transform: translateX(0%);
		transform: translateX(0%);
	}
}

/* Desktop */
@media (min-width: 1269px) {
	.hamburger-react {
		display: none;
	}

	.navlinks {
		display: flex;
	}

	.navlinks li {
		margin-left: 1rem;
	}

	.navlinks li:first-of-type {
		margin-left: 0;
	}
}

